--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -15,6 +15,8 @@ volumes:
     driver: ${VOLUMES_DRIVER}
   mongo:
     driver: ${VOLUMES_DRIVER}
+  redis:
+    driver: ${VOLUMES_DRIVER}
 
 services:
   ### Application ################################################
@@ -195,3 +197,47 @@ services:
       - "traefik.backend=traefik"
       - "traefik.frontend.rule=Host:${TRAEFIK_WEB_URL}"
       - "traefik.port=8080"
+
+  ### Redis ################################################
+  redis:
+    build: ./redis
+    volumes:
+      - ${DATA_PATH_HOST}/redis:/data
+    ports:
+      - "${REDIS_PORT}:6379"
+    networks:
+      - backend
+    labels:
+      - traefik.enable=false
+
+  ### Redis Cluster ##########################################
+  redis-cluster:
+    build: ./redis-cluster
+    ports:
+      - "${REDIS_CLUSTER_PORT_RANGE}:7000-7005"
+    networks:
+      - backend
+    labels:
+      - traefik.enable=false
+
+  ### REDISWEBUI ################################################
+  redis-webui:
+    build:
+      context: ./redis-webui
+    environment:
+      - ADMIN_USER=${REDIS_WEBUI_USERNAME}
+      - ADMIN_PASS=${REDIS_WEBUI_PASSWORD}
+      - REDIS_1_HOST=${REDIS_WEBUI_CONNECT_HOST}
+      - REDIS_1_PORT=${REDIS_WEBUI_CONNECT_PORT}
+    networks:
+      - frontend
+      - backend
+    # ports:
+    #   - "${REDIS_WEBUI_PORT}:80"
+    depends_on:
+      - redis
+    labels:
+      - "traefik.backend=redis"
+      - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_frontend"
+      - "traefik.frontend.rule=Host:${REDIS_WEBUI_URL}"
+      - "traefik.port=80"
