--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -137,6 +137,7 @@ services:
       - "traefik.frontend.rule=Host:${ME_URL}"
       - "traefik.port=8081"
     environment:
+      ME_CONFIG_MONGODB_SERVER: ${ME_CONFIG_MONGODB_SERVER}
       ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
       ME_CONFIG_BASICAUTH_USERNAME: ${ME_CONFIG_BASICAUTH_USERNAME}
