--- a/strapi/package.json
+++ b/strapi/package.json
@@ -18,20 +18,20 @@
     "eslint-plugin-react": "^7.14.0"
   },
   "dependencies": {
+    "knex": "^0.20.1",
     "lodash": "^4.17.5",
+    "mysql": "latest",
     "strapi": "3.0.0-beta.16.4",
     "strapi-admin": "3.0.0-beta.16.4",
-    "strapi-utils": "3.0.0-beta.16.4",
-    "strapi-plugin-settings-manager": "3.0.0-beta.16.4",
-    "strapi-plugin-content-type-builder": "3.0.0-beta.16.4",
-    "strapi-plugin-content-manager": "3.0.0-beta.16.4",
-    "strapi-plugin-users-permissions": "3.0.0-beta.16.4",
-    "strapi-plugin-email": "3.0.0-beta.16.4",
-    "strapi-plugin-upload": "3.0.0-beta.16.4",
     "strapi-hook-bookshelf": "3.0.0-beta.16.4",
     "strapi-hook-knex": "3.0.0-beta.16.4",
-    "knex": "latest",
-    "mysql": "latest"
+    "strapi-plugin-content-manager": "3.0.0-beta.16.4",
+    "strapi-plugin-content-type-builder": "3.0.0-beta.16.4",
+    "strapi-plugin-email": "3.0.0-beta.16.4",
+    "strapi-plugin-settings-manager": "3.0.0-beta.16.4",
+    "strapi-plugin-upload": "3.0.0-beta.16.4",
+    "strapi-plugin-users-permissions": "3.0.0-beta.16.4",
+    "strapi-utils": "3.0.0-beta.16.4"
   },
   "author": {
     "name": "A Strapi developer"
