--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -45,7 +45,7 @@ services:
   ## API ###############################EXPOSE 3000#################
   strapi:
     depends_on:
-      - ${STRAPI_DATABASE_HOST}
+      - ${STRAPI_DATABASE_CLIENT}
     build:
       context: ./strapi
     restart: unless-stopped
@@ -54,6 +54,15 @@ services:
     networks:
       - frontend
       - backend
+    environment:
+      - DATABASE_HOST=${STRAPI_DATABASE_HOST}
+      - DATABASE_PORT=${STRAPI_DATABASE_PORT}
+      - DATABASE_SRV=${STRAPI_DATABASE_SRV}
+      - DATABASE_NAME=${STRAPI_DATABASE_NAME}
+      - DATABASE_USERNAME=${STRAPI_DATABASE_USERNAME}
+      - DATABASE_PASSWORD=${STRAPI_DATABASE_PASSWORD}
+      - DATABASE_SSL=${STRAPI_DATABASE_SSL}
+      - DATABASE_AUTHENTICATION_DATABASE=${STRAPI_DATABASE_AUTHENTICATION_DATABASE}
     labels:
       - "traefik.backend=strapi"
       - "traefik.frontend.rule=Host:${STRAPI_HOST_URL}"
@@ -111,10 +120,10 @@ services:
   ### MongoDB ##############################################
   mongo:
     image: mongo
-    # environment:
-    #   MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
-    #   MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
-    #   MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
     volumes:
       - ${DATA_PATH_HOST}/mongo:/data/db
     networks:
@@ -127,7 +136,6 @@ services:
     depends_on:
       - mongo
     image: mongo-express
-    # restart: always
     networks:
       - frontend
       - backend
@@ -138,14 +146,14 @@ services:
       - "traefik.port=8081"
     environment:
       ME_CONFIG_MONGODB_SERVER: ${ME_CONFIG_MONGODB_SERVER}
-      # ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_INITDB_ROOT_USERNAME}
-      # ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
       ME_CONFIG_BASICAUTH_USERNAME: ${ME_CONFIG_BASICAUTH_USERNAME}
       ME_CONFIG_BASICAUTH_PASSWORD: ${ME_CONFIG_BASICAUTH_PASSWORD}
-      # ME_CONFIG_MONGODB_ENABLE_ADMIN: ${ME_CONFIG_MONGODB_ENABLE_ADMIN}
-      # ME_CONFIG_MONGODB_AUTH_DATABASE: ${ME_CONFIG_MONGODB_AUTH_DATABASE}
-      # ME_CONFIG_MONGODB_AUTH_USERNAME: ${ME_CONFIG_MONGODB_AUTH_USERNAME}
-      # ME_CONFIG_MONGODB_AUTH_PASSWORD: ${ME_CONFIG_MONGODB_AUTH_PASSWORD}
+      ME_CONFIG_MONGODB_ENABLE_ADMIN: ${ME_CONFIG_MONGODB_ENABLE_ADMIN}
+      ME_CONFIG_MONGODB_AUTH_DATABASE: ${ME_CONFIG_MONGODB_AUTH_DATABASE}
+      ME_CONFIG_MONGODB_AUTH_USERNAME: ${ME_CONFIG_MONGODB_AUTH_USERNAME}
+      ME_CONFIG_MONGODB_AUTH_PASSWORD: ${ME_CONFIG_MONGODB_AUTH_PASSWORD}
 
   ### Jenkins ###################################################
   jenkins:
@@ -187,7 +195,6 @@ services:
       - "traefik.frontend.rule=Host:${ADMINER_URL}"
       - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_frontend"
       - "traefik.port=8080"
-      # - "traefik.frontend.headers.SSLRedirect=false"
     networks:
       - frontend
       - backend
@@ -246,8 +253,6 @@ services:
     networks:
       - frontend
       - backend
-    # ports:
-    #   - "${REDIS_WEBUI_PORT}:80"
     depends_on:
       - redis
     labels:
