--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -17,6 +17,8 @@ volumes:
     driver: ${VOLUMES_DRIVER}
   redis:
     driver: ${VOLUMES_DRIVER}
+  webhook:
+    driver: ${VOLUMES_DRIVER}
 
 services:
   ### Application ################################################
@@ -80,9 +82,9 @@ services:
         - MYSQL_VERSION=${MYSQL_VERSION}
     command: --default-authentication-plugin=mysql_native_password
     environment:
-      - MYSQL_DATABASE=${MYSQL_DATABASE}
-      - MYSQL_USER=${MYSQL_USER}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
+      - MYSQL_DATABASE=${STRAPI_DATABASE_NAME}
+      - MYSQL_USER=${STRAPI_DATABASE_USERNAME}
+      - MYSQL_PASSWORD=${STRAPI_DATABASE_PASSWORD}
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
       - TZ=${WORKSPACE_TIMEZONE}
     volumes:
@@ -108,9 +110,9 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     environment:
       - TZ=${WORKSPACE_TIMEZONE}
-      - MYSQL_DATABASE=${MARIADB_DATABASE}
-      - MYSQL_USER=${MARIADB_USER}
-      - MYSQL_PASSWORD=${MARIADB_PASSWORD}
+      - MYSQL_DATABASE=${STRAPI_DATABASE_DATABASE_NAME}
+      - MYSQL_USER=${STRAPI_DATABASE_USERNAME}
+      - MYSQL_PASSWORD=${STRAPI_DATABASE_PASSWORD}
       - MYSQL_ROOT_PASSWORD=${MARIADB_ROOT_PASSWORD}
     networks:
       - backend
@@ -121,9 +123,9 @@ services:
   mongo:
     image: mongo
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
-      MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
+      MONGO_INITDB_ROOT_USERNAME: ${STRAPI_DATABASE_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${STRAPI_DATABASE_PASSWORD}
+      MONGO_INITDB_DATABASE: ${STRAPI_DATABASE_NAME}
     volumes:
       - ${DATA_PATH_HOST}/mongo:/data/db
     networks:
@@ -146,14 +148,14 @@ services:
       - "traefik.port=8081"
     environment:
       ME_CONFIG_MONGODB_SERVER: ${ME_CONFIG_MONGODB_SERVER}
-      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_INITDB_ROOT_USERNAME}
-      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${STRAPI_DATABASE_USERNAME}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${STRAPI_DATABASE_PASSWORD}
       ME_CONFIG_BASICAUTH_USERNAME: ${ME_CONFIG_BASICAUTH_USERNAME}
       ME_CONFIG_BASICAUTH_PASSWORD: ${ME_CONFIG_BASICAUTH_PASSWORD}
       ME_CONFIG_MONGODB_ENABLE_ADMIN: ${ME_CONFIG_MONGODB_ENABLE_ADMIN}
-      ME_CONFIG_MONGODB_AUTH_DATABASE: ${ME_CONFIG_MONGODB_AUTH_DATABASE}
-      ME_CONFIG_MONGODB_AUTH_USERNAME: ${ME_CONFIG_MONGODB_AUTH_USERNAME}
-      ME_CONFIG_MONGODB_AUTH_PASSWORD: ${ME_CONFIG_MONGODB_AUTH_PASSWORD}
+      ME_CONFIG_MONGODB_AUTH_DATABASE: ${STRAPI_DATABASE_AUTHENTICATION_DATABASE}
+      ME_CONFIG_MONGODB_AUTH_USERNAME: ${STRAPI_DATABASE_USERNAME}
+      ME_CONFIG_MONGODB_AUTH_PASSWORD: ${STRAPI_DATABASE_PASSWORD}
 
   ### Jenkins ###################################################
   jenkins:
@@ -177,7 +179,7 @@ services:
     volumes:
       - ${WEBHOOK_HOOKS_DIR}:/etc/webhook
       - ${WEBHOOK_SCRIPTS_DIR}:/opt/scripts
-      - ${WEBHOOK_DEPLOY_REPOSITORY}:/opt/deploy
+      - ${APP_CODE_PATH_HOST}:/opt/deploy
     networks:
       - frontend
     labels:
