--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -167,7 +167,7 @@ services:
       JAVA_OPTS: "-Djava.awt.headless=true"
     ports:
       - "${JENKINS_HOST_SLAVE_AGENT_PORT}:50000"
-      - "${JENKINS_HOST_HTTP_PORT}:8080"
+      # - "${JENKINS_HOST_HTTP_PORT}:8080"
     privileged: true
     volumes:
       - ${JENKINS_HOME}:/var/jenkins_home
@@ -175,6 +175,11 @@ services:
     networks:
       - frontend
       - backend
+    labels:
+      - "traefik.backend=jenkins"
+      - "traefik.frontend.rule=Host:${JENKINS_URL}"
+      - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_frontend"
+      - "traefik.port=8080"
 
   ### Webhook ###################################################
   webhook:
