--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -13,6 +13,8 @@ volumes:
     driver: ${VOLUMES_DRIVER}
   mariadb:
     driver: ${VOLUMES_DRIVER}
+  postgres:
+    driver: ${VOLUMES_DRIVER}
   mongo:
     driver: ${VOLUMES_DRIVER}
   redis:
@@ -44,10 +46,47 @@ services:
       - "traefik.port=3000"
       - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_frontend"
 
-  ## API ###############################EXPOSE 3000#################
+  ## PRISMA ################################################
+  prisma:
+    image: prismagraphql/prisma:1.34
+    restart: always
+    environment:
+      PRISMA_CONFIG: |
+        ## The Management API secret is used by the Prisma CLI to generate authentication tokens and authenticate its requests against the Prisma server.
+        # managementApiSecret: ${PRISMA_MANAGEMENT_API_SECRET}
+        port: 4466
+        databases:
+          ## MongoDB ##
+          default:
+            connector: ${API_DATABASE_CLIENT}
+            uri: mongodb://${API_DATABASE_USERNAME}:${API_DATABASE_USERNAME}@${API_DATABASE_HOST}
+            migrations: ${PRISMA_MIGRATIONS}
+            ssl: ${API_DATABASE_SSL}
+            ## The maximum number of database connections (must be at least 2).
+            # connectionLimit: ${PRISMA_CONNECTION_LIMIT}
+          ## SQL ##
+          # default:
+          # connector: ${API_DATABASE_CLIENT}
+          # host: ${API_DATABASE_HOST}
+          # port: ${API_DATABASE_PORT}
+          # user: ${API_DATABASE_USERNAME}
+          # password: ${API_DATABASE_PASSWORD}
+          # migrations: ${PRISMA_MIGRATIONS}
+          # ssl: ${API_DATABASE_SSL}
+          # connectionLimit: ${PRISMA_CONNECTION_LIMIT}
+    networks:
+      - frontend
+      - backend
+    labels:
+      - "traefik.backend=prisma"
+      - "traefik.frontend.rule=Host:${PRISMA_WEB_URL}"
+      - "traefik.port=4466"
+      - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_frontend"
+
+  ## STRAPI ################################################
   strapi:
     depends_on:
-      - ${STRAPI_DATABASE_CLIENT}
+      - ${API_DATABASE_CLIENT}
     build:
       context: ./strapi
     restart: unless-stopped
@@ -57,17 +96,17 @@ services:
       - frontend
       - backend
     environment:
-      - DATABASE_HOST=${STRAPI_DATABASE_HOST}
-      - DATABASE_PORT=${STRAPI_DATABASE_PORT}
-      - DATABASE_SRV=${STRAPI_DATABASE_SRV}
-      - DATABASE_NAME=${STRAPI_DATABASE_NAME}
-      - DATABASE_USERNAME=${STRAPI_DATABASE_USERNAME}
-      - DATABASE_PASSWORD=${STRAPI_DATABASE_PASSWORD}
-      - DATABASE_SSL=${STRAPI_DATABASE_SSL}
-      - DATABASE_AUTHENTICATION_DATABASE=${STRAPI_DATABASE_AUTHENTICATION_DATABASE}
+      - DATABASE_HOST=${API_DATABASE_HOST}
+      - DATABASE_PORT=${API_DATABASE_PORT}
+      - DATABASE_SRV=${API_DATABASE_SRV}
+      - DATABASE_NAME=${API_DATABASE_NAME}
+      - DATABASE_USERNAME=${API_DATABASE_USERNAME}
+      - DATABASE_PASSWORD=${API_DATABASE_PASSWORD}
+      - DATABASE_SSL=${API_DATABASE_SSL}
+      - DATABASE_AUTHENTICATION_DATABASE=${API_DATABASE_AUTHENTICATION_DATABASE}
     labels:
       - "traefik.backend=strapi"
-      - "traefik.frontend.rule=Host:${STRAPI_HOST_URL}"
+      - "traefik.frontend.rule=Host:${API_HOST_URL}"
       - "traefik.port=1337"
       - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_frontend"
     volumes:
@@ -82,9 +121,9 @@ services:
         - MYSQL_VERSION=${MYSQL_VERSION}
     command: --default-authentication-plugin=mysql_native_password
     environment:
-      - MYSQL_DATABASE=${STRAPI_DATABASE_NAME}
-      - MYSQL_USER=${STRAPI_DATABASE_USERNAME}
-      - MYSQL_PASSWORD=${STRAPI_DATABASE_PASSWORD}
+      - MYSQL_DATABASE=${API_DATABASE_NAME}
+      - MYSQL_USER=${API_DATABASE_USERNAME}
+      - MYSQL_PASSWORD=${API_DATABASE_PASSWORD}
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
       - TZ=${WORKSPACE_TIMEZONE}
     volumes:
@@ -110,14 +149,31 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     environment:
       - TZ=${WORKSPACE_TIMEZONE}
-      - MYSQL_DATABASE=${STRAPI_DATABASE_NAME}
-      - MYSQL_USER=${STRAPI_DATABASE_USERNAME}
-      - MYSQL_PASSWORD=${STRAPI_DATABASE_PASSWORD}
+      - MYSQL_DATABASE=${API_DATABASE_NAME}
+      - MYSQL_USER=${API_DATABASE_USERNAME}
+      - MYSQL_PASSWORD=${API_DATABASE_PASSWORD}
       - MYSQL_ROOT_PASSWORD=${MARIADB_ROOT_PASSWORD}
     networks:
       - backend
     labels:
       - traefik.enable=false
+
+    ### PostgreSQL ###########################################
+    postgres:
+      build: ./postgres
+      volumes:
+        - ${DATA_PATH_HOST}/postgres:/var/lib/postgresql/data
+        - ${POSTGRES_ENTRYPOINT_INITDB}:/docker-entrypoint-initdb.d
+      ports:
+        - "${POSTGRES_PORT}:5432"
+      environment:
+        - POSTGRES_DB=${API_DATABASE_NAME}
+        - POSTGRES_USER=${API_DATABASE_USERNAME}
+        - POSTGRES_PASSWORD=${API_DATABASE_PASSWORD}
+      networks:
+        - backend
+      labels:
+        - traefik.enable=false
 
   ### MongoDB ##############################################
   mongo:
@@ -126,9 +182,9 @@ services:
       args:
         - MONGO_VERSION=${MONGO_VERSION}
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${STRAPI_DATABASE_USERNAME}
-      MONGO_INITDB_ROOT_PASSWORD: ${STRAPI_DATABASE_PASSWORD}
-      MONGO_INITDB_DATABASE: ${STRAPI_DATABASE_NAME}
+      MONGO_INITDB_ROOT_USERNAME: ${API_DATABASE_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${API_DATABASE_PASSWORD}
+      MONGO_INITDB_DATABASE: ${API_DATABASE_NAME}
     volumes:
       - ${DATA_PATH_HOST}/mongo:/data/db
     networks:
@@ -151,14 +207,14 @@ services:
       - "traefik.port=8081"
     environment:
       ME_CONFIG_MONGODB_SERVER: ${ME_CONFIG_MONGODB_SERVER}
-      ME_CONFIG_MONGODB_ADMINUSERNAME: ${STRAPI_DATABASE_USERNAME}
-      ME_CONFIG_MONGODB_ADMINPASSWORD: ${STRAPI_DATABASE_PASSWORD}
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${API_DATABASE_USERNAME}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${API_DATABASE_PASSWORD}
       ME_CONFIG_BASICAUTH_USERNAME: ${ME_CONFIG_BASICAUTH_USERNAME}
       ME_CONFIG_BASICAUTH_PASSWORD: ${ME_CONFIG_BASICAUTH_PASSWORD}
       ME_CONFIG_MONGODB_ENABLE_ADMIN: ${ME_CONFIG_MONGODB_ENABLE_ADMIN}
-      ME_CONFIG_MONGODB_AUTH_DATABASE: ${STRAPI_DATABASE_AUTHENTICATION_DATABASE}
-      ME_CONFIG_MONGODB_AUTH_USERNAME: ${STRAPI_DATABASE_USERNAME}
-      ME_CONFIG_MONGODB_AUTH_PASSWORD: ${STRAPI_DATABASE_PASSWORD}
+      ME_CONFIG_MONGODB_AUTH_DATABASE: ${API_DATABASE_AUTHENTICATION_DATABASE}
+      ME_CONFIG_MONGODB_AUTH_USERNAME: ${API_DATABASE_USERNAME}
+      ME_CONFIG_MONGODB_AUTH_PASSWORD: ${API_DATABASE_PASSWORD}
 
   ### Jenkins ###################################################
   jenkins:
