--- a/graphql/package.json
+++ b/graphql/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node ./src/index.ts",
-    "dev": "ts-node-dev --no-notify --respawn --transpileOnly ./src/index.ts",
-    "prisma:gen": "npx nexus-prisma-generate --client ./src/Schema/generated/prisma-client --output ./src/Schema/generated/nexus-prisma"
+    "start": "node ./src/index.js",
+    "dev": "nodemon ./src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -31,14 +30,10 @@
     "yup": "^0.27.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.6.1",
-    "@typescript-eslint/parser": "^2.6.1",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-prettier": "^3.1.1",
-    "prettier": "^1.18.2",
-    "ts-node": "^8.4.1",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.7.2"
+    "nodemon": "^2.0.1",
+    "prettier": "^1.18.2"
   }
 }
