Finalizes default GraphQL server

--- a/.env.example
+++ b/.env.example
@@ -28,8 +28,7 @@ API_DATABASE_AUTHENTICATION_DATABASE=admin
 GRAPHQL_API_ENV=development
 # Used to validate user sessions
 GRAPHQL_API_APP_SECRET=GRAPHQLAPIApplicationSecret
-# Used to access the Prisma API
-GRAPHQL_API_PRISMA_SECRET=PrismaSecret
+
 # See BYCRYPT docs
 GRAPHQL_API_BCRYPT_SALT_ROUNDS=12
 GRAPHQL_API_WEB_URL=graphql.local.test
@@ -39,10 +38,15 @@ GRAPHQL_PRISMA_PLAYGROUND_URL=
 
 ### PRISMA #################################################
 
-PRISMA_MANAGEMENT_API_SECRET=PrimaManagmentSecret
+PRISMA_MANAGEMENT_API_SECRET=PrismaManagmentSecret
 PRISMA_MIGRATIONS=false
 PRISMA_CONNECTION_LIMIT=2
 PRISMA_WEB_URL=prisma.local.test
+# Used to access the Prisma API
+PRISMA_ENDPOINT=http://prisma:4466
+# .local.test
+PRISMA_SECRET=PrismaSecret
+
 
 ### MYSQL #################################################
 
