--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -313,6 +313,7 @@ services:
     command: --docker
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./traefik/acme.json:/acme.json
     ports:
       - "${TRAEFIK_HOST_HTTP_PORT}:80"
       - "${TRAEFIK_HOST_HTTPS_PORT}:443"
