--- a/.env.example
+++ b/.env.example
@@ -116,6 +116,7 @@ ADMINER_DESIGN=galkaev
 
 ### TRAEFIK #################################################
 
+TRAEFIK_DO_AUTH_TOKEN=
 TRAEFIK_HOST_HTTP_PORT=80
 TRAEFIK_HOST_HTTPS_PORT=443
 TRAEFIK_WEB_URL=monitor.local.test
