Updates Traefik production configurations to work with Namecheap

--- a/.env.example
+++ b/.env.example
@@ -120,6 +120,8 @@ TRAEFIK_DO_AUTH_TOKEN=
 TRAEFIK_HOST_HTTP_PORT=80
 TRAEFIK_HOST_HTTPS_PORT=443
 TRAEFIK_WEB_URL=monitor.local.test
+TRAEFIK_NAMECHEAP_API_USER=
+TRAEFIK_NAMECHEAP_API_KEY=
 
 ### REDIS #################################################
 
