Updates current configuration

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 APP_CODE_PATH_HOST=../
 APP_CODE_PATH_CONTAINER=/usr
-APP_WEB_URL=local.test
 
 VOLUMES_DRIVER=local
 NETWORKS_DRIVER=bridge
@@ -11,6 +10,51 @@ COMPOSE_PROJECT_NAME=local
 
 WORKSPACE_TIMEZONE=Africa/Lusaka
 
+### TRAEFIK BACKENDS, URLS & PORTS #################################################
+TB_APP=frontend
+APP_HOST_URL=app.local.test
+APP_CONTAINER_PORT=3000
+
+TB_GRAPHQL=graphql-api
+GRAPHQL_API_HOST_URL=graphql.local.test
+GRAPHQL_CONTAINER_PORT=4000
+
+TB_PRISMA=prisma
+PRISMA_HOST_URL=prisma.local.test
+PRISMA_CONTAINER_PORT=4466
+
+TB_STRAPI=strapi
+STRAPI_HOST_URL=strapi.local.test
+STRAPI_CONTAINER_PORT=1337
+
+TB_MONGO_EXPRESS='mongo-express'
+MONGO_EXPRESS_HOST_URL=mongo.local.test
+MONGO_EXPRESS_CONTAINER_PORT=8081
+
+TB_JENKINS=jenkins
+JENKINS_HOST_URL=jenkins.local.test
+JENKINS_CONTAINER_PORT=8080
+
+TB_WEBHOOK=webhook
+WEBHOOK_HOST_URL=webhook.local.test
+WEBHOOK_CONTAINER_PORT=9000
+
+TB_ADMINER=adminer
+ADMINER_HOST_URL=adminer.local.test
+ADMINER_CONTAINER_PORT=8080
+
+TB_REDIS_WEBUI=redis
+REDIS_WEBUI_HOST_URL=redis.local.test
+REDIS_WEBUI_CONTAINER_PORT=80
+
+TB_TRAEFIK=monitor
+TRAEFIK_HOST_URL=monitor.local.test
+
+### ADONIS API CONTAINERS #################################################
+MS_ONE=authors
+MS_ONE_HOST_URL=authors.local.test
+MS_ONE_PORT=3333
+
 ### API #################################################
 
 API_DATABASE_CLIENT=mysql
@@ -20,7 +64,6 @@ API_DATABASE_SRV=false
 API_DATABASE_NAME=app
 API_DATABASE_USERNAME=default
 API_DATABASE_PASSWORD=secret
-API_HOST_URL=api.local.test
 API_DATABASE_SSL=false
 API_DATABASE_AUTHENTICATION_DATABASE=admin
 
@@ -31,7 +74,6 @@ GRAPHQL_API_APP_SECRET=GRAPHQLAPIApplicationSecret
 
 # See BYCRYPT docs
 GRAPHQL_API_BCRYPT_SALT_ROUNDS=12
-GRAPHQL_API_WEB_URL=graphql.local.test
 GRAPHQL_PRISMA_FRONTEND_URL=
 GRAPHQL_PRISMA_BACKEND_URL=
 GRAPHQL_PRISMA_PLAYGROUND_URL=
@@ -41,7 +83,6 @@ GRAPHQL_PRISMA_PLAYGROUND_URL=
 PRISMA_MANAGEMENT_API_SECRET=PrismaManagmentSecret
 PRISMA_MIGRATIONS=false
 PRISMA_CONNECTION_LIMIT=2
-PRISMA_WEB_URL=prisma.local.test
 # Used to access the Prisma API
 PRISMA_ENDPOINT=http://prisma:4466
 # .local.test
@@ -78,14 +119,12 @@ POSTGRES_ENTRYPOINT_INITDB=./postgres/docker-entrypoint-initdb.d
 
 ### JENKINS ###############################################
 
-JENKINS_URL=jenkins.local.test
 JENKINS_HOST_HTTP_PORT=8090
 JENKINS_HOST_SLAVE_AGENT_PORT=50000
 JENKINS_HOME=./jenkins/jenkins_home
 
 ### WEBHOOK ###############################################
 
-WEBHOOK_URL=webhook.local.test
 WEBHOOK_HOOKS_DIR=./webhook/hooks
 WEBHOOK_SCRIPTS_DIR=./webhook/scripts
 WEBHOOK_DEPLOY_REPOSITORY=${APP_CODE_PATH_HOST}
@@ -100,7 +139,6 @@ MONGO_INITDB_DATABASE=${API_DATABASE_NAME}
 
 ### MONGO-EXPRESS ###############################################
 
-ME_URL=mongo.local.test
 ME_CONFIG_MONGODB_SERVER=mongo
 ME_CONFIG_BASICAUTH_USERNAME=default
 ME_CONFIG_BASICAUTH_PASSWORD=secret
@@ -110,7 +148,6 @@ ME_CONFIG_MONGODB_AUTH_USERNAME=${API_DATABASE_USERNAME}
 ME_CONFIG_MONGODB_AUTH_PASSWORD=${API_DATABASE_PASSWORD}
 
 ### ADMINER ###############################################
-ADMINER_URL=adminer.local.test
 ADMINER_HOST=mysql
 ADMINER_DESIGN=galkaev
 
@@ -119,7 +156,6 @@ ADMINER_DESIGN=galkaev
 TRAEFIK_DO_AUTH_TOKEN=
 TRAEFIK_HOST_HTTP_PORT=80
 TRAEFIK_HOST_HTTPS_PORT=443
-TRAEFIK_WEB_URL=monitor.local.test
 TRAEFIK_NAMECHEAP_API_USER=
 TRAEFIK_NAMECHEAP_API_KEY=
 
@@ -132,7 +168,6 @@ REDIS_PORT=6379
 REDIS_CLUSTER_PORT_RANGE=7000-7005
 
 ### REDISWEBUI #########################################
-REDIS_WEBUI_URL=redis.local.test
 REDIS_WEBUI_USERNAME=default
 REDIS_WEBUI_PASSWORD=secret
 REDIS_WEBUI_CONNECT_HOST=redis
