--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -24,10 +24,9 @@ volumes:
 
 services:
   ### Application ################################################
-  app:
+  frontend:
     depends_on:
       - traefik
-      # - strapi
     restart: always
     build:
       context: ../app/
@@ -38,12 +37,33 @@ services:
       HOST: 0.0.0.0
     networks:
       - frontend
-    expose:
-      - "3000"
     labels:
-      - "traefik.backend=app"
-      - "traefik.frontend.rule=Host:${APP_WEB_URL}"
-      - "traefik.port=3000"
+      - "traefik.backend=${TB_APP}"
+      - "traefik.frontend.rule=Host:${APP_HOST_URL}"
+      - "traefik.port=${APP_CONTAINER_PORT}"
+      - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_frontend"
+
+  ## Adonis Microservices ################################################
+
+  authors:
+    depends_on:
+      - ${API_DATABASE_CLIENT}
+    restart: always
+    build:
+      context: ../microservices/${MS_ONE}
+      dockerfile: Dockerfile.v5.dev
+    volumes:
+      - ${APP_CODE_PATH_CONTAINER}/api/node_modules
+      - ${APP_CODE_PATH_HOST}/${MS_ONE}:${APP_CODE_PATH_CONTAINER}/api
+    environment:
+      HOST: 0.0.0.0
+    networks:
+      - frontend
+      - backend
+    labels:
+      - "traefik.backend=${MS_ONE}"
+      - "traefik.frontend.rule=Host:${MS_ONE_HOST_URL}"
+      - "traefik.port=${MS_ONE_PORT}"
       - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_frontend"
 
   ## API ################################################
@@ -71,9 +91,9 @@ services:
     depends_on:
       - prisma
     labels:
-      - "traefik.backend=graphql-api"
-      - "traefik.frontend.rule=Host:${GRAPHQL_API_WEB_URL}"
-      - "traefik.port=4000"
+      - "traefik.backend=${TB_GRAPHQL}"
+      - "traefik.frontend.rule=Host:${GRAPHQL_API_HOST_URL}"
+      - "traefik.port=${GRAPHQL_CONTAINER_PORT}"
       - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_frontend"
 
   ## PRISMA ################################################
@@ -81,7 +101,7 @@ services:
     image: prismagraphql/prisma:1.34
     restart: always
     ports:
-      - "4466:4466"
+      - "${PRISMA_CONTAINER_PORT}:${PRISMA_CONTAINER_PORT}"
     environment:
       LOG_LEVEL: TRACE
       PRISMA_CONFIG: |
@@ -114,9 +134,9 @@ services:
       - frontend
       - backend
     labels:
-      - "traefik.backend=prisma"
-      - "traefik.frontend.rule=Host:${PRISMA_WEB_URL}"
-      - "traefik.port=4466"
+      - "traefik.backend=${TB_PRISMA}"
+      - "traefik.frontend.rule=Host:${PRISMA_HOST_URL}"
+      - "traefik.port=${PRISMA_CONTAINER_PORT}"
       - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_frontend"
 
   ## STRAPI ################################################
@@ -126,8 +146,6 @@ services:
     build:
       context: ./strapi
     restart: unless-stopped
-    expose:
-      - "1337"
     networks:
       - frontend
       - backend
@@ -141,9 +159,9 @@ services:
       - DATABASE_SSL=${API_DATABASE_SSL}
       - DATABASE_AUTHENTICATION_DATABASE=${API_DATABASE_AUTHENTICATION_DATABASE}
     labels:
-      - "traefik.backend=strapi"
-      - "traefik.frontend.rule=Host:${API_HOST_URL}"
-      - "traefik.port=1337"
+      - "traefik.backend=${TB_STRAPI}"
+      - "traefik.frontend.rule=Host:${STRAPI_HOST_URL}"
+      - "traefik.port=${STRAPI_CONTAINER_PORT}"
       - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_frontend"
     volumes:
       - ${APP_CODE_PATH_CONTAINER}/api/node_modules
@@ -236,11 +254,6 @@ services:
     networks:
       - frontend
       - backend
-    labels:
-      - "traefik.backend=mongo-express"
-      - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_frontend"
-      - "traefik.frontend.rule=Host:${ME_URL}"
-      - "traefik.port=8081"
     environment:
       ME_CONFIG_MONGODB_SERVER: ${ME_CONFIG_MONGODB_SERVER}
       ME_CONFIG_MONGODB_ADMINUSERNAME: ${API_DATABASE_USERNAME}
@@ -251,6 +264,11 @@ services:
       ME_CONFIG_MONGODB_AUTH_DATABASE: ${API_DATABASE_AUTHENTICATION_DATABASE}
       ME_CONFIG_MONGODB_AUTH_USERNAME: ${API_DATABASE_USERNAME}
       ME_CONFIG_MONGODB_AUTH_PASSWORD: ${API_DATABASE_PASSWORD}
+    labels:
+      - "traefik.backend=${TB_MONGO_EXPRESS}"
+      - "traefik.frontend.rule=Host:${MONGO_EXPRESS_HOST_URL}"
+      - "traefik.port=${MONGO_EXPRESS_CONTAINER_PORT}"
+      - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_frontend"
 
   ### Jenkins ###################################################
   jenkins:
@@ -268,10 +286,10 @@ services:
       - frontend
       - backend
     labels:
-      - "traefik.backend=jenkins"
-      - "traefik.frontend.rule=Host:${JENKINS_URL}"
+      - "traefik.backend=${TB_JENKINS}"
+      - "traefik.frontend.rule=Host:${JENKINS_HOST_URL}"
       - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_frontend"
-      - "traefik.port=8080"
+      - "traefik.port=${JENKINS_CONTAINER_PORT}"
 
   ### Webhook ###################################################
   webhook:
@@ -283,51 +301,28 @@ services:
     networks:
       - frontend
     labels:
-      - "traefik.backend=webhook"
-      - "traefik.frontend.rule=Host:${WEBHOOK_URL}"
+      - "traefik.backend=${TB_WEBHOOK}"
+      - "traefik.frontend.rule=Host:${WEBHOOK_HOST_URL}"
       - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_frontend"
-      - "traefik.port=9000"
+      - "traefik.port=${WEBHOOK_CONTAINER_PORT}"
 
   ### Adminer ################################################
   adminer:
+    depends_on:
+      - ${ADMINER_HOST}
     image: adminer:4.7.3-standalone
     restart: unless-stopped
     environment:
       - ADMINER_DESIGN=${ADMINER_DESIGN}
-    labels:
-      - "traefik.backend=adminer"
-      - "traefik.frontend.rule=Host:${ADMINER_URL}"
-      - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_frontend"
-      - "traefik.port=8080"
     networks:
       - frontend
       - backend
-    depends_on:
-      - ${ADMINER_HOST}
-
-  ### TRAEFIK #########################################
-  traefik:
-    build:
-      context: ./traefik
-    environment:
-      - DO_AUTH_TOKEN=${TRAEFIK_DO_AUTH_TOKEN}
-    restart: always
-    environment:
-      - NAMECHEAP_API_USER=${TRAEFIK_NAMECHEAP_API_USER}
-      - NAMECHEAP_API_KEY=${TRAEFIK_NAMECHEAP_API_KEY}
-    command: --docker
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - ./traefik/acme:/etc/traefik/acme
-    ports:
-      - "${TRAEFIK_HOST_HTTP_PORT}:80"
-      - "${TRAEFIK_HOST_HTTPS_PORT}:443"
-    networks:
-      - frontend
     labels:
-      - "traefik.backend=traefik"
-      - "traefik.frontend.rule=Host:${TRAEFIK_WEB_URL}"
-      - "traefik.port=8080"
+      - "traefik.backend=${TB_ADMINER}"
+      - "traefik.frontend.rule=Host:${ADMINER_HOST_URL}"
+      - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_frontend"
+      - "traefik.port=${ADMINER_CONTAINER_PORT}"
+
 
   ### Redis ################################################
   redis:
@@ -366,7 +361,30 @@ services:
     depends_on:
       - redis
     labels:
-      - "traefik.backend=redis"
+      - "traefik.backend=${TB_REDIS_WEBUI}"
+      - "traefik.frontend.rule=Host:${REDIS_WEBUI_HOST_URL}"
       - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_frontend"
-      - "traefik.frontend.rule=Host:${REDIS_WEBUI_URL}"
-      - "traefik.port=80"
+      - "traefik.port=${REDIS_WEBUI_CONTAINER_PORT}"
+
+  ### TRAEFIK #########################################
+  traefik:
+    build:
+      context: ./traefik
+    restart: always
+    environment:
+      - DO_AUTH_TOKEN=${TRAEFIK_DO_AUTH_TOKEN}
+      - NAMECHEAP_API_USER=${TRAEFIK_NAMECHEAP_API_USER}
+      - NAMECHEAP_API_KEY=${TRAEFIK_NAMECHEAP_API_KEY}
+    command: --docker
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./traefik/acme:/etc/traefik/acme
+    ports:
+      - "${TRAEFIK_HOST_HTTP_PORT}:80"
+      - "${TRAEFIK_HOST_HTTPS_PORT}:443"
+    networks:
+      - frontend
+    labels:
+      - "traefik.backend=${TB_TRAEFIK}"
+      - "traefik.frontend.rule=Host:${TRAEFIK_HOST_URL}"
+      - "traefik.port=8080"
