--- a/examples/backend/Dockerfile.dev
+++ b/examples/backend/Dockerfile.dev
@@ -15,7 +15,7 @@ RUN npm i -g @adonisjs/cli
 USER node
 
 # copy 'package.json'
-COPY --chown=node:node ./package.json ./
+COPY --chown=node:node ./package.json ./yarn.lock ./
 
 # install project dependencies
 RUN yarn
