--- a/examples/frontend/Dockerfile.dev
+++ b/examples/frontend/Dockerfile.dev
@@ -13,7 +13,7 @@ RUN chown -R node:node /usr/app
 USER node
 
 # copy 'package.json'
-COPY --chown=node:node ./package.json ./
+COPY --chown=node:node ./package.json ./yarn.lock ./
 
 # install project dependencies
 RUN yarn
