--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -1,4 +1,6 @@
-FROM postgres:alpine
+ARG POSTGRES_VERSION=alpine
+
+FROM postgres:${POSTGRES_VERSION}
 
 LABEL maintainer="Ben M <git@bmagg.com>"
 
