--- a/examples/backend/Dockerfile.v5
+++ b/examples/backend/Dockerfile.v5
@@ -10,10 +10,10 @@ RUN chown -R node:node /usr/api
 USER node
 
 # copy 'package.json'
-COPY --chown=node:node ./package.json ./
+COPY --chown=node:node ./package.json ./yarn.lock ./
 
 # install project dependencies
-RUN yarn
+RUN  yarn install --production
 
 COPY --chown=node:node . .
 
