--- a/examples/backend/Dockerfile.v5.dev
+++ b/examples/backend/Dockerfile.v5.dev
@@ -10,7 +10,7 @@ RUN chown -R node:node /usr/api
 USER node
 
 # copy 'package.json'
-COPY --chown=node:node ./package.json ./
+COPY --chown=node:node ./package.json ./yarn.lock ./
 
 # install project dependencies
 RUN yarn
