--- a/examples/frontend/Dockerfile
+++ b/examples/frontend/Dockerfile
@@ -16,10 +16,10 @@ RUN chown -R node:node /usr/app
 USER node
 
 # copy 'package.json'
-COPY --chown=node:node ./package.json ./
+COPY --chown=node:node ./package.json ./yarn.lock ./
 
 # install project dependencies
-RUN yarn
+RUN  yarn install --production
 
 COPY --chown=node:node . .
 
