Adds support for microservice development

--- a/.env.example
+++ b/.env.example
@@ -4,11 +4,27 @@ APP_CODE_PATH_CONTAINER=/usr
 VOLUMES_DRIVER=local
 NETWORKS_DRIVER=bridge
 
+# Docker Sync
+# You may add flags to the path `:cached`, `:delegated`. When using Docker Sync add `:nocopy`
+APP_CODE_CONTAINER_FLAG=:cached
+
 DATA_PATH_HOST=~/.js/data
 
+### Docker compose files ##################################
+
+# Select which docker-compose files to include. If using docker-sync append `:docker-compose.sync.yml` at the end
+COMPOSE_FILE=docker-compose.yml
+
+# Change the separator from : to ; on Windows
+COMPOSE_PATH_SEPARATOR=:
+
+# Define the prefix of container names. This is useful if you have multiple projects that use laradock to have seperate containers per project.
 COMPOSE_PROJECT_NAME=local
 
-WORKSPACE_TIMEZONE=Africa/Lusaka
+### Docker Sync ###########################################
+
+# If you are using Docker Sync. For `osx` use 'native_osx', for `windows` use 'unison', for `linux` docker-sync is not required
+DOCKER_SYNC_STRATEGY=native_osx
 
 ### TRAEFIK BACKENDS, URLS & PORTS #################################################
 TB_APP=frontend
@@ -50,20 +66,35 @@ REDIS_WEBUI_CONTAINER_PORT=80
 TB_TRAEFIK=monitor
 TRAEFIK_HOST_URL=monitor.local.test
 
+TB_AMBASSADOR=ambassador
+AMBASSADOR_HOST_URL=apigateway.local.test
+AMBASSADOR_HOST_URL_PREFIX='/api'
+AMBASSADOR_CONTAINER_PORT=8080
+
+TB_ELASTICSEARCH=elastic
+ELASTICSEARCH_HOST_URL=es.local.test
+ELASTICSEARCH_HOST_HTTP_PORT=9200
+
+TB_FUSIONAUTH=fusionauth
+FUSIONAUTH_HOST_URL=fusionauth.local.test
+FUSIONAUTH_CONTAINER_PORT=9011
+
 ### ADONIS API CONTAINERS #################################################
 MS_ONE=authors
 MS_ONE_HOST_URL=authors.local.test
 MS_ONE_PORT=3333
 
 ### API #################################################
-
-API_DATABASE_CLIENT=mysql
-API_DATABASE_HOST=mysql
-API_DATABASE_PORT=27017
+API_DATABASE_CLIENT=postgres
+API_DATABASE_HOST=postgres
+API_DATABASE_URL=jdbc:postgresql
+API_DATABASE_PORT=5432
 API_DATABASE_SRV=false
-API_DATABASE_NAME=app
-API_DATABASE_USERNAME=default
+# API_DATABASE_NAME=
+API_DATABASE_USER=default
 API_DATABASE_PASSWORD=secret
+API_DATABASE_ROOT_USER=root
+API_DATABASE_ROOT_PASSWORD=root
 API_DATABASE_SSL=false
 API_DATABASE_AUTHENTICATION_DATABASE=admin
 
@@ -111,6 +142,7 @@ MARIADB_ENTRYPOINT_INITDB=./mariadb/docker-entrypoint-initdb.d
 
 ### POSTGRES ##############################################
 
+POSTGRES_VERSION=alpine
 POSTGRES_DB=${API_DATABASE_NAME}
 POSTGRES_USER=${API_DATABASE_USERNAME}
 POSTGRES_PASSWORD=${API_DATABASE_PASSWORD}
@@ -148,7 +180,6 @@ ME_CONFIG_MONGODB_AUTH_USERNAME=${API_DATABASE_USERNAME}
 ME_CONFIG_MONGODB_AUTH_PASSWORD=${API_DATABASE_PASSWORD}
 
 ### ADMINER ###############################################
-ADMINER_HOST=mysql
 ADMINER_DESIGN=galkaev
 
 ### TRAEFIK #################################################
@@ -173,3 +204,11 @@ REDIS_WEBUI_PASSWORD=secret
 REDIS_WEBUI_CONNECT_HOST=redis
 REDIS_WEBUI_CONNECT_PORT=6379
 REDIS_WEBUI_PORT=9987
+
+### ELASTIC SEARCH #########################################
+ELK_VERSION=6.3.1
+ELASTICSEARCH_JAVA_OPTS=-Xms256m -Xmx256m
+ELASTICSEARCH_HOST_TRANSPORT_PORT=9300
+
+### FUSIONAUTH #########################################
+FUSIONAUTH_MEMORY=512M
