--- a/.env.example
+++ b/.env.example
@@ -122,7 +122,7 @@ PRISMA_SECRET=PrismaSecret
 
 ### MYSQL #################################################
 
-MYSQL_VERSION=latest
+MYSQL_VERSION=8
 MYSQL_DATABASE=${API_DATABASE_NAME}
 MYSQL_USER=${API_DATABASE_USERNAME}
 MYSQL_PASSWORD=${API_DATABASE_PASSWORD}
@@ -132,7 +132,7 @@ MYSQL_ENTRYPOINT_INITDB=./mysql/docker-entrypoint-initdb.d
 
 ### MARIADB ###############################################
 
-MARIADB_VERSION=latest
+MARIADB_VERSION=bionic
 MARIADB_DATABASE=${API_DATABASE_NAME}
 MARIADB_USER=${API_DATABASE_USERNAME}
 MARIADB_PASSWORD=${API_DATABASE_PASSWORD}
