File structure and configuration updates

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ DATA_PATH_HOST=~/.js/data
 # Select which docker-compose files to include. If using docker-sync append `:docker-compose.sync.yml` at the end
 COMPOSE_FILE=docker-compose.yml
 
+WORKSPACE_TIMEZONE=Africa/Lusaka
+
 # Change the separator from : to ; on Windows
 COMPOSE_PATH_SEPARATOR=:
 
@@ -80,6 +82,8 @@ FUSIONAUTH_HOST_URL=fusionauth.local.test
 FUSIONAUTH_CONTAINER_PORT=9011
 
 ### ADONIS API CONTAINERS #################################################
+MS_DIR=microservices
+
 MS_ONE=authors
 MS_ONE_HOST_URL=authors.local.test
 MS_ONE_PORT=3333
