--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -28,25 +28,25 @@ volumes:
 
 services:
   ### Application ################################################
-  frontend:
-    depends_on:
-      - traefik
-    restart: always
-    build:
-      context: ../app/
-    volumes:
-      - ${APP_CODE_PATH_CONTAINER}/app/node_modules
-      - ${APP_CODE_PATH_HOST}/app:${APP_CODE_PATH_CONTAINER}/app
-    env_file: ../app/.env
-    environment:
-      HOST: 0.0.0.0
-    networks:
-      - frontend
-    labels:
-      - "traefik.backend=${TB_APP}"
-      - "traefik.frontend.rule=Host:${APP_HOST_URL}"
-      - "traefik.port=${APP_CONTAINER_PORT}"
-      - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_frontend"
+  # frontend:
+  #   depends_on:
+  #     - traefik
+  #   restart: always
+  #   build:
+  #     context: ../frontend/
+  #   volumes:
+  #     - ${APP_CODE_PATH_CONTAINER}/app/node_modules
+  #     - ${APP_CODE_PATH_HOST}/app:${APP_CODE_PATH_CONTAINER}/app
+  #   env_file: ../frontend/.env
+  #   environment:
+  #     HOST: 0.0.0.0
+  #   networks:
+  #     - frontend
+  #   labels:
+  #     - "traefik.backend=${TB_APP}"
+  #     - "traefik.frontend.rule=Host:${APP_HOST_URL}"
+  #     - "traefik.port=${APP_CONTAINER_PORT}"
+  #     - "traefik.docker.network=${COMPOSE_PROJECT_NAME}_frontend"
 
   ## Adonis Microservices ################################################
 
@@ -55,12 +55,12 @@ services:
       - ${API_DATABASE_CLIENT}
     restart: always
     build:
-      context: ../microservices/${MS_ONE}
+      context: ../${MS_DIR}/${MS_ONE}
       dockerfile: Dockerfile.v5.dev
     volumes:
       - ${APP_CODE_PATH_CONTAINER}/api/node_modules
-      - ${APP_CODE_PATH_HOST}/${MS_ONE}:${APP_CODE_PATH_CONTAINER}/api
-    env_file: ../${MS_ONE}/.env
+      - ${APP_CODE_PATH_HOST}/${MS_DIR}/${MS_ONE}:${APP_CODE_PATH_CONTAINER}/api
+    env_file: ../${MS_DIR}/${MS_ONE}/.env
     environment:
       HOST: 0.0.0.0
     networks:
@@ -158,7 +158,7 @@ services:
     networks:
       - frontend
       - backend
-    env_file: ../strapi/.env
+    # env_file: ./strapi/.env
     environment:
       - DATABASE_HOST=${API_DATABASE_HOST}
       - DATABASE_PORT=${API_DATABASE_PORT}
@@ -224,9 +224,9 @@ services:
 
   ### PostgreSQL ###########################################
   postgres:
-    build: 
+    build:
       context: ./postgres
-       args:
+      args:
         - POSTGRES_VERSION=${POSTGRES_VERSION}
     volumes:
       - ${DATA_PATH_HOST}/postgres:/var/lib/postgresql/data
